[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI Scripts/start menu.gd" type="Script" id=1]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Shape Shifters Icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -3.0
margin_right = 2.0
margin_bottom = -277.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -161.0
margin_right = 144.0
script = ExtResource( 1 )

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 291.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="How to play" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 291.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "How to play"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 291.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="Title" type="Label" parent="."]
anchor_left = 0.378
anchor_top = 0.436
anchor_right = 0.621
anchor_bottom = 0.525
margin_left = 8.23999
margin_top = 3.58405
margin_right = 8.23999
margin_bottom = 3.58405
custom_fonts/font = SubResource( 1 )
text = "Shape Shifters"
align = 1
valign = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 887.0
margin_top = 437.0
margin_right = 1262.0
margin_bottom = 795.0
rect_scale = Vector2( 0.397, 0.418 )
texture = ExtResource( 3 )
stretch_mode = 6

[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer" method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/How to play" to="VBoxContainer" method="_on_how_to_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_Quit_pressed"]
